--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="com.folkcat.run"
           xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -49,6 +50,12 @@
         </activity>
         <activity
             android:name=".activity.TestMapActivity"
+            android:exported="true"
+            android:label="TestBroadcastActivity">
+
+        </activity>
+        <activity
+            android:name=".activity.CameraActivity"
             android:exported="true"
             android:label="TestBroadcastActivity">
 
